--- a/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/styles.scss
@@ -38,6 +38,7 @@
 @import "blocks/commons/_block-follow";
 @import "blocks/commons/_block-breadcrumb";
 @import "blocks/commons/_block-parallax";
+@import "blocks/commons/_block-related-posts";
 @import "blocks/commons/_hero-title";
 
 //Blocks Home
