--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-breadcrumb.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-breadcrumb.scss
@@ -11,7 +11,10 @@
 		li {
 			display: inline-block;
 			font-family: $book;
-			font-size: em(18);
+			font-size: em(14);
+			@include desktop {
+				font-size: em(18);
+			}
 			.sep {
 				display: inline-block;
 				color: $dblue;
