--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-team-list.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-team-list.scss
@@ -28,12 +28,12 @@
 				display: block;
 				color: $cream;
 				width: 90%;
-				margin: 2% auto;
+				margin: 2% auto 3%;
 				@include desktop {
 					display: inline-block;
 					vertical-align: top;
 					width: 18%;
-					margin:0 1% 0 0;
+					margin:0 1% 2% 0;
 				}
 				img {
 					width: 100%;
