--- a/wp-content/themes/laureus-theme/front-dev/scss/_fonts.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_fonts.scss
@@ -15,7 +15,7 @@
 }
 
 @font-face {
-    font-family: 'Gotham Book';
+    font-family: 'Gotham-Book-Font';
     src: url('../fonts/gotham/Gotham-Book.woff2') format('woff2'),
         url('../fonts/gotham/Gotham-Book.woff') format('woff');
     font-weight: normal;
