--- a/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/_variables.scss
@@ -42,5 +42,5 @@ $big-desktop-width: 1481px;
 $regular: 'Gotham Medium';
 $bold: 'Gotham Bold';
 $light: 'Gotham Light';
-$book: 'Gotham Book';
+$book: 'Gotham-Book-Font';
 $extra: 'Gotham Black';
