--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-light-carousel.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-light-carousel.scss
@@ -94,10 +94,13 @@
 				width: 100%;
 				color: $dblue;
 				font-family: $bold;
-				font-size: em(14);
+				font-size: em(11);
 				letter-spacing: 2px;
 				text-transform: uppercase;
 				text-align: center;
+				&:hover {
+					color: $marine;
+				}
 			}
 		}
 
