--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-related-posts.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/commons/_block-related-posts.scss
@@ -25,10 +25,15 @@
 				height: em(443);
 			}
 			figure {
-				margin: em(17) em(16);
+				margin: em(17) 0;
 				text-align: left;
 				img {
 					display: inline-block;
+				}
+			}
+			&:hover {
+				h3 {
+					color: $crygr;
 				}
 			}
 			h3 {
@@ -41,6 +46,8 @@
 				margin-bottom: 30px;
 				position: relative;
 				text-align: center;
+				color: $dblue;
+				translate: all 0.3s;
 				@include desktop {
 					text-align: left;
 					font-size: 45px;
@@ -55,6 +62,7 @@
 			}
 			p {
 				font-size: em(20);
+				color: $txtgrey;
 			}
 		}
 	}
@@ -76,6 +84,11 @@
 			padding: em(10) em(20);
 			width: 90%;
 			background-color: $white;
+			&:hover {
+				h3 {
+					color: $crygr;
+				}
+			}
 			@include desktop {
 				padding: em(20) em(22);
 				margin: 0 em(20);
@@ -96,6 +109,8 @@
 				font-family: $bold;
 				padding-bottom: 20px;
 				position: relative;
+				color: $dblue;
+				translate: all 0.3s;
 				span {
 					display: block;
 					line-height: 1;
