--- a/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-story.scss
+++ b/wp-content/themes/laureus-theme/front-dev/scss/blocks/home/_block-story.scss
@@ -57,6 +57,7 @@
 					margin-top: 0;
 					font-size: em(60);
 					font-family: $bold;
+					margin-bottom: 30px;
 					@include desktop {
 						font-size: em(80);
 					}
